--- a/Api/package.json
+++ b/Api/package.json
@@ -4,8 +4,19 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
+    "start": "nodemon main",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.0.0",
+    "bluebird": "^3.7.2",
+    "body-parser": "^1.19.0",
+    "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "lodash": "^4.17.20",
+    "mongoose": "^5.10.8"
+  }
 }
