--- a/mobileApp/package.json
+++ b/mobileApp/package.json
@@ -10,11 +10,15 @@
   "dependencies": {
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
+    "lottie-react-native": "^3.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-confirmation-code-input": "^1.0.4",
     "react-native-elements": "^2.3.2",
     "react-native-extended-stylesheet": "^0.12.0",
+    "react-native-modal": "^11.5.6",
+    "react-native-phone-number-input": "^1.1.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
