--- a/mobileApp/package.json
+++ b/mobileApp/package.json
@@ -8,7 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~39.0.2",
+    "expo": "^39.0.3",
     "expo-status-bar": "~1.0.2",
     "lottie-react-native": "^3.5.0",
     "react": "16.13.1",
