--- a/Api/package.json
+++ b/Api/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
-    "mongoose": "^5.10.8"
+    "mongoose": "^5.10.8",
+    "node-geocoder": "^3.27.0"
   }
 }
