--- a/mobileApp/package.json
+++ b/mobileApp/package.json
@@ -8,6 +8,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@ant-design/react-native": "^4.0.5",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/cameraroll": "^4.0.1",
+    "@react-native-community/picker": "^1.8.1",
+    "@react-native-community/segmented-control": "^2.1.2",
+    "@react-native-community/slider": "^3.0.3",
+    "@react-native-community/viewpager": "^4.1.6",
     "expo": "^39.0.3",
     "expo-status-bar": "~1.0.2",
     "lottie-react-native": "^3.5.0",
@@ -17,6 +24,7 @@
     "react-native-confirmation-code-input": "^1.0.4",
     "react-native-elements": "^2.3.2",
     "react-native-extended-stylesheet": "^0.12.0",
+    "react-native-maps": "^0.27.1",
     "react-native-modal": "^11.5.6",
     "react-native-phone-number-input": "^1.1.0",
     "react-native-web": "~0.13.12"
