--- a/mobileApp/package.json
+++ b/mobileApp/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/segmented-control": "^2.1.2",
     "@react-native-community/slider": "^3.0.3",
     "@react-native-community/viewpager": "^4.1.6",
+    "axios": "^0.20.0",
     "expo": "^39.0.3",
     "expo-status-bar": "~1.0.2",
     "lottie-react-native": "^3.5.0",
