--- a/Api/package.json
+++ b/Api/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@avaya/cpaas": "^0.9.1",
     "axios": "^0.20.0",
     "bcrypt": "^5.0.0",
     "bluebird": "^3.7.2",
