--- a/mobileApp/package.json
+++ b/mobileApp/package.json
@@ -22,6 +22,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-collapse-view": "^1.0.0",
+    "react-native-collapsible": "^1.5.3",
     "react-native-confirmation-code-input": "^1.0.4",
     "react-native-elements": "^2.3.2",
     "react-native-extended-stylesheet": "^0.12.0",
