--- a/mobileApp/package.json
+++ b/mobileApp/package.json
@@ -11,10 +11,15 @@
     "@ant-design/react-native": "^4.0.5",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/cameraroll": "^4.0.1",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/picker": "^1.8.1",
     "@react-native-community/segmented-control": "^2.1.2",
     "@react-native-community/slider": "^3.0.3",
     "@react-native-community/viewpager": "^4.1.6",
+    "@react-navigation/bottom-tabs": "^5.9.2",
+    "@react-navigation/drawer": "^5.9.3",
+    "@react-navigation/native": "^5.7.6",
+    "@react-navigation/stack": "^5.9.3",
     "expo": "^39.0.3",
     "expo-status-bar": "~1.0.2",
     "lottie-react-native": "^3.5.0",
@@ -24,10 +29,16 @@
     "react-native-confirmation-code-input": "^1.0.4",
     "react-native-elements": "^2.3.2",
     "react-native-extended-stylesheet": "^0.12.0",
+    "react-native-gesture-handler": "~1.7.0",
     "react-native-maps": "^0.27.1",
     "react-native-modal": "^11.5.6",
     "react-native-phone-number-input": "^1.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.2",
+    "react-navigation-drawer": "react-navigation/drawer"
   },
   "devDependencies": {
     "@types/react": "~16.9.35",
